# crm-juridico-ai

./: .gitignore  README.md  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.yml
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  gemini_service.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  clientes.py  documentos.py  health.py  honorarios.py  notificacoes.py  processos.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  firebase_auth.py  logging.py  middleware.py  security.py  storage.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  cliente.py  documento.py  escritorio.py  honorario.py  notificacao.py  processo.py  usuario.py
backend/app/repositories/: __init__.py  base.py  cliente_repository.py  documento_repository.py  escritorio_repository.py  honorario_repository.py  notificacao_repository.py  processo_repository.py  usuario_repository.py
backend/app/schemas/: __init__.py  base.py  cliente.py  documento.py  escritorio.py  honorario.py  notificacao.py  processo.py  usuario.py
backend/app/services/: __init__.py  auth_service.py  cliente_service.py  documento_service.py  escritorio_service.py  honorario_service.py  notificacao_service.py  processo_service.py
backend/app/workers/: __init__.py  calculation_tasks.py  celery_app.py  document_tasks.py  notification_tasks.py
backend/tests/: conftest.py  test_clientes.py  test_health.py  test_utils.py
docs/: DEPLOY_GCP.md
frontend/: .env.example  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
scripts/: deploy-gcp.sh  deploy.sh  dev-setup.sh  gcp-setup.sh  git-helper.sh  init-db.sql  (+1 more)
(+36 files in other folders)
